--- a/self_driving_cars/style.css
+++ b/self_driving_cars/style.css
@@ -5,9 +5,37 @@ body{
 
 h1{
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
 }
 
 #myCanvas{
     background-color: #2a5;
+}
+
+button{
+    background-color: white;
+    padding: 5px 10px;
+    border: none;
+    margin-top: 10px;
+}
+
+.danger{
+    background-color: red;
+    color: white;
+}
+
+.success{
+    background-color: green;
+    color: white;
+    margin-right: 10px;
+}
+
+.disabled {
+    background-color: gray;
+    filter: grayscale(100%);
+}
+
+.primary{
+    background-color: #0d6efd;
+    color: white;
 }
