--- a/self_driving_cars/style.css
+++ b/self_driving_cars/style.css
@@ -12,11 +12,13 @@ h1{
     background-color: #2a5;
 }
 
-button{
+button, .file-input-label{
+    display: inline-block;
     background-color: white;
     padding: 5px 10px;
     border: none;
     margin-top: 10px;
+    border-radius: 5px;
 }
 
 .danger{
@@ -27,7 +29,6 @@ button{
 .success{
     background-color: green;
     color: white;
-    margin-right: 10px;
 }
 
 .disabled {
@@ -38,4 +39,13 @@ button{
 .primary{
     background-color: #0d6efd;
     color: white;
+}
+
+#graphBtn{
+    margin-left: 10px;
+
+}
+
+input[type="file"]{
+    display: none;
 }
