--- a/self_driving_cars/style.css
+++ b/self_driving_cars/style.css
@@ -49,3 +49,77 @@ button, .file-input-label{
 input[type="file"]{
     display: none;
 }
+
+.title{
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.infoBtn{
+    margin-top: 0px;
+    padding: 0px;
+    height: 32px;
+    width: 32px;
+    font-size: 32px;
+    line-height: 32px;
+}
+
+#modalInfo{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 12px;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+}
+
+.modal-content .close{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    color: red;
+    border: red 1px solid;
+    border-radius: 100%;
+    font-weight: bold;
+    width: 24px;
+    height: 24px;
+    text-align: center;
+    line-height: 24px;
+}
+
+.modal-content ul, .modal-content p {
+    margin: 0;
+}
+
+.modal-content ul li{
+    margin-top:5px;
+}
+
+.modal-content .category{
+    font-weight: bold;
+}
+
+.modal-content h2{
+    text-align: center;
+}
+
+.modal-content .controlsCategory{
+    margin-bottom: 5px;
+}
+
